--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -18,28 +18,15 @@ h1 {
   margin-bottom: 0;
   text-transform: uppercase;
   padding: 1.5rem;
-  color: rgb(249, 250, 250);
+  color: $secondary-white;
 }
 
-.input {
-  padding: 2rem;
-  display: flex;
-  justify-content: center;
-}
-
-.input-field {
-  color: black;
-}
-.date {
-  display: flex;
-  flex-direction: column;
-}
 .mid {
   height: 40rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url(../media/nightsky.jpg);
+  background-image: url(../src/assets/images/nightsky.jpg);
   background-size: cover;
 }
 .mid > h4 {
@@ -49,33 +36,8 @@ h1 {
   text-align: center;
   letter-spacing: 0.3rem;
   line-height: 2.5rem;
-  color: $black;
+  color: $secondary-white;
 }
-
-label {
-  text-transform: uppercase;
-  font-size: 1.25rem;
-  padding: 1rem;
-}
-
-// button {
-//   color: whitesmoke;
-//   height: 3rem;
-//   background-color: rgb(0, 0, 0);
-//   text-transform: uppercase;
-//   border: 1px solid rgba(99, 18, 18);
-//   background-color: rgba(99, 18, 18);
-//   border-radius: 1.5rem;
-//   padding: 0.5rem 1rem;
-//   margin-left: 1rem;
-//   margin-top: 2.5rem;
-// }
-
-// button:hover {
-//   background-color: rgb(193, 35, 35);
-//   transition: 0.3s ease-in-out;
-//   color: white;
-// }
 
 .divider {
   position: absolute;
