--- a/src/components/explore/Explore.scss
+++ b/src/components/explore/Explore.scss
@@ -8,24 +8,29 @@
   font-weight: 700;
   color: $primary-white;
   text-transform: uppercase;
-  border: 1px solid $red;
   background-color: $red;
+  background-image: url(../../assets/images/rocket.svg);
+  background-repeat: no-repeat;
+  background-position: 90%;
+  background-size: 1.5rem;
   border-radius: 1.5rem;
-  padding: 0.8rem 2rem;
+  border: none;
+  padding: 0.8rem 2.5rem 0.8rem 1rem;
   margin-left: 1rem;
-  margin-top: 2.5rem;
-  box-shadow: 1px 1px 1px 1px $black;
+  box-shadow: 2px 2px 2px $black;
   &:hover {
     background-color: $bright-red;
     transition: 0.3s ease-in-out;
-    box-shadow: 0px 2px 10px 5px rgb(74, 21, 21);
+    box-shadow: 0px 2px 10px 5px $red;
   }
 }
 
 .apod {
   text-align: center;
+  margin-top: 1rem;
   &__title {
     margin-bottom: 0;
+    margin-top: 2rem;
     text-align: center;
   }
   &__media {
@@ -38,15 +43,20 @@
     font-family: "Montserrat", sans-serif;
     padding: 0 2rem;
   }
-}
-
-.input {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-  color: #333;
-  background-color: #c1bebe;
+  &__gif {
+    padding: 1rem;
+  }
+  &__input {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #333;
+    background-color: #dcd4d4;
+  }
+  &__label {
+    padding: 1rem;
+  }
 }
